# promptillery

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: ablation_minimal.yaml  ablation_model_comparison.yaml  ablation_teacher_comparison.yaml  augmentation_without_active_learning_selection.yaml  budget_stopping.yaml  causal_lm_sft_tiny.yaml  early_stopping.yaml  hyperparameter_sweep.yaml  materialize_sft_tiny.yaml  policy_stop_tiny.yaml  student_only_tiny.yaml  text_classification_fasttext.yaml  text_classification_transformers.yaml
examples/data/: causal_lm_sft_tiny_train.jsonl  causal_lm_sft_tiny_validation.jsonl  materialize_sft_tiny_source.jsonl
promptillery/: __init__.py  ablation.py  analyze.py  baseline_eval.py  cli.py  config.py  engine.py  figures.py  policy_controller.py  policy_decisions.py  policy_features.py  reproducibility.py  sft_materialize.py  token_tracker.py  utils.py
promptillery/cotrain/: __init__.py  actions.py  (+13 more)
tests/: test_ablation_sharding.py  test_cotrain_actions.py  test_cotrain_arbitration.py  test_cotrain_bootstrap.py  test_cotrain_cli_dispatch.py  test_cotrain_confidence.py  test_cotrain_config.py  test_cotrain_controller_linearbai.py  test_cotrain_controller_p.py  test_cotrain_controller_uniform.py  test_cotrain_dual_trainer.py  test_cotrain_engine_real_models.py  test_cotrain_engine_smoke.py  test_cotrain_features.py  test_cotrain_flow.py  test_cotrain_provenance.py  test_cotrain_validation.py  test_cotrain_variant_generator.py  test_pilot_gate_controls.py  test_reproducibility_manifest.py  test_sft_online_augmentation.py
(+13 files in other folders)
